--- a/package.json
+++ b/package.json
@@ -2,27 +2,31 @@
   "name": "fis-parser-jdists",
   "title": "fis parser region",
   "description": "fis parser plugin",
-  "version": "2.2.0",
+  "version": "2.2.3",
   "homepage": "https://github.com/fex-team/fis-parser-jdists",
   "main": "index.js",
   "author": {
     "name": "zswang",
     "url": "http://weibo.com/zswang"
   },
-  "keywords": ["fis", "region", "jdists"],
+  "keywords": [
+    "fis",
+    "region",
+    "jdists"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/fex-team/fis-parser-jdists.git"
   },
   "dependencies": {
-    "jdists": "^2.1.7"
+    "jdists": "^2.2.3"
   },
   "devDependencies": {
-    "mocha": "2.0.1",
-    "istanbul": "0.3.17",
-    "should": "4.1.0",
-    "jshint": "2.5.8"
+    "istanbul": "^0.4.5",
+    "jshint": "^2.9.5",
+    "mocha": "^5.2.0",
+    "should": "4.1.0"
   },
   "files": [
     "index.js",
